--- a/visualize_evol_instruct.ipynb
+++ b/visualize_evol_instruct.ipynb
@@ -83,7 +83,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/Users/qnguyen3/Downloads/the_tomb_evolved-3e_batch1.json', 'r') as f:\n",
+    "# change your path\n",
+    "\n",
+    "evolved_instruction_path = 'the_tomb_evolved-3e_batch1.json'\n",
+    "\n",
+    "with open(evolved_instruction_path, 'r') as f:\n",
     "    data = json.load(f)"
    ]
   },
